--- a/training/debugging.qmd
+++ b/training/debugging.qmd
@@ -114,7 +114,7 @@ doEvent.My_linear_model.init <- function(sim, eventTime, eventType, priority) {
     x <- rnorm(10)
     y <- x + rnorm(10)
     sim$model <- lm(y ~ x)  
-    return(sim)
+    return(invisible(sim))
 }
 ```
 
