--- a/training/ModuleInputs.qmd
+++ b/training/ModuleInputs.qmd
@@ -70,7 +70,7 @@ There are several ways to get objects into the `simList`:
 -   using the `params` argument;
 
 -   Developer creates defaults and specifies them in `defineParameter()`
-    and `.inputObjects`;
+and `.inputObjects`;
 
 -   A different module creates them prior to the running of this module.
 
@@ -140,7 +140,7 @@ the file** after you're done.
 ```{r}
 #| eval: false
 #| purl: false
- 
+
 defineModule(
   <...>
     parameters = bindrows(
@@ -195,7 +195,7 @@ isn't in `sim`, then give it a value.
     sim$y <- rnorm(100)
   }
   
-  return(sim)
+  return(invisible(sim))
 }
 ```
 
@@ -213,34 +213,34 @@ We will look at a few examples in this module:
 [Biomass_core::.inputObjects](https://github.com/PredictiveEcology/Biomass_core/blob/d5c214b69f35e7a9f57c59ca7d08329b49328e86/Biomass_core.R#L1964).
 
 1.  some [GIS tests that evaluate whether 2 objects are in the same
-    CRS](https://github.com/PredictiveEcology/Biomass_core/blob/d5c214b69f35e7a9f57c59ca7d08329b49328e86/Biomass_core.R#L2052)
-    (i.e., they need to be the same projection, etc., for this module to
-    work)
+CRS](https://github.com/PredictiveEcology/Biomass_core/blob/d5c214b69f35e7a9f57c59ca7d08329b49328e86/Biomass_core.R#L2052)
+(i.e., they need to be the same projection, etc., for this module to
+work)
 
 2.  if an object is missing, [it may make sense to fill in the details
-    with parameters from the
-    Internet](https://github.com/PredictiveEcology/Biomass_core/blob/d5c214b69f35e7a9f57c59ca7d08329b49328e86/Biomass_core.R#L2066).
+with parameters from the
+Internet](https://github.com/PredictiveEcology/Biomass_core/blob/d5c214b69f35e7a9f57c59ca7d08329b49328e86/Biomass_core.R#L2066).
 
 3.  an object called `studyArea`. [The developer tests whether it exists
-    and creates an error if it does not
-    exist](https://github.com/PredictiveEcology/Biomass_core/blob/d5c214b69f35e7a9f57c59ca7d08329b49328e86/Biomass_core.R#L1972).
+and creates an error if it does not
+exist](https://github.com/PredictiveEcology/Biomass_core/blob/d5c214b69f35e7a9f57c59ca7d08329b49328e86/Biomass_core.R#L1972).
 
 ## Questions
 
 1.  In `.inputObjects`, why don't we just write `if (!is.null(sim$y))`?
-    See
-    [`?SpaDES.core::suppliedElsewhere`](https://rdrr.io/cran/SpaDES.core/man/suppliedElsewhere.html)
+See
+[`?SpaDES.core::suppliedElsewhere`](https://rdrr.io/cran/SpaDES.core/man/suppliedElsewhere.html)
 
-    -   It turns out that other modules may create this object "after"
-        this module is run, and this test will fail.
+-   It turns out that other modules may create this object "after"
+this module is run, and this test will fail.
 
 ## Try on your own
 
 -   Using the *My_linear_model* shown above, try running simulations
-    where you pass different values to the `length` parameter
+where you pass different values to the `length` parameter
 
-    -   Tip: have a look at the `params` argument of
-        `SpaDES.core::simInitAndSpades()`
+-   Tip: have a look at the `params` argument of
+`SpaDES.core::simInitAndSpades()`
 
 ## See also
 
